# pyxel

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yml  release.yml
crates/: Cargo.toml
crates/pyxel-binding/: Cargo.toml
crates/pyxel-binding/src/: audio_wrapper.rs  channel_wrapper.rs  font_wrapper.rs  graphics_wrapper.rs  image_wrapper.rs  input_wrapper.rs  lib.rs  math_wrapper.rs  music_wrapper.rs  pyxel_singleton.rs  resource_wrapper.rs  sound_wrapper.rs  system_wrapper.rs  tilemap_wrapper.rs  tone_wrapper.rs  utils.rs  variable_wrapper.rs
crates/pyxel-core/: Cargo.toml  build.rs
docs/: api-reference.md  coding-policy-audit.md  coding-policy.md  editor-manual.md  faq-ja.md  faq.md  pyxres-format.md  user-guide.md  web-usage.md
python/: pyproject.toml  requirements.txt
python/pyxel/: __init__.pyi  __main__.py  cli.py  utils.py
python/tests/: _assertions.py  _capture.py  _runner.py  conftest.py  test_apps.py  test_audio.py  test_audio_render.py  test_audio_semantics.py  test_channel.py  test_cli.py  test_editor.py  test_errors.py  test_examples.py  test_font.py  test_generate_docs.py  test_graphics.py  test_image.py  test_import_hook.py  test_input.py  (+12 more)
scripts/: generate_docs  generate_gamepad_images  generate_pyi_docstrings  generate_thanks_image  install_wasm_wheel  run_examples  run_tests  setup_venv  start_showcase  start_test_server  update_version
wasm/: import_hook.py  pyxel.css  pyxel.js
web/: package.json  shared.js
(+95 files in other folders)
